--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <link rel="shortcut icon" type="image/x-icon" href="content/icons/favicon.ico?1">
+        <link rel="stylesheet"    type="text/css"     href="css/index.css?1">
 
+        <title>BackMusic - Фоновая безрекламная музыка!</title>
+    </head>
+
+    <body>
+        <div class="content">
+            <div id="message">
+                Сайт в разработке</br>
+            </div>
+        </div>
+    </body>
+</html>
