--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <body>
         <div class="content">
             <div id="message">
-                Сайт в разработке</br>
+                Сайт в разработке
+            </div>
+
+            <div id="social_accounts">
+                Мой <a class="link" href="https://t.me/mr_lukov">Telegram</a>
             </div>
         </div>
     </body>
