--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="shortcut icon" type="image/x-icon" href="content/icons/favicon.ico?1">
-        <link rel="stylesheet"    type="text/css"     href="css/index.css?1">
+        <link rel="shortcut icon" type="image/x-icon" href="content/icons/favicon.ico">
+        <link rel="stylesheet"    type="text/css"     href="css/index.css">
 
         <title>BackMusic - Фоновая безрекламная музыка!</title>
     </head>
