--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+
         <link rel="shortcut icon" type="image/x-icon" href="content/icons/favicon.ico">
         <link rel="stylesheet"    type="text/css"     href="css/index.css">
 
