--- a/index.html
+++ b/index.html
@@ -4,20 +4,45 @@
         <meta charset="utf-8">
         <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 
-        <link rel="shortcut icon" type="image/x-icon" href="content/icons/favicon.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="content/images/favicon.ico">
         <link rel="stylesheet"    type="text/css"     href="css/index.css">
 
-        <title>BackMusic - Фоновая безрекламная музыка!</title>
+        <script src="js/utils.js"></script>
+
+        <title>BackMusic - Безрекламная музыка</title>
     </head>
 
     <body>
+        <div class="header no-select">
+            <div id="logo" title="Подняться наверх">
+                <div id="logo-icon"></div>
+                <div id="logo-text">BackMusic</div>
+            </div>
+        </div>
+
         <div class="content">
-            <div id="message">
-                Сайт в разработке
+            <canvas id="fluid-canvas"></canvas>
+            <script src="js/fluid-sim.js"></script>
+
+            <div id="main-text">
+                Основная страница в разработке.
+            </div>
+        </div>
+
+        <div class="footer no-select">
+            <div id="copyright">
+                Copyright © <script>get_current_year()</script> LukovDev LLC
             </div>
 
-            <div id="social_accounts">
-                Мой <a class="link" href="https://t.me/mr_lukov">Telegram</a>
+            <div id="feedback">
+                Обратная связь:</br>
+                <a target="_blank" href="https://github.com/LukovDev">GitHub LukovDev</a></br>
+                <a target="_blank" href="https://t.me/mr_lukov">Telegram</a></br>
+                <a target="_blank" href="https://vk.com/mr_lukov">VK</a></br>
+                </div>
+
+            <div id="github-pages">
+                Hosted on GitHub Pages
             </div>
         </div>
     </body>
