--- a/secret.html
+++ b/secret.html
@@ -9,7 +9,7 @@
 
         <script src="js/utils.js"></script>
 
-        <title>Secret Page</title>
+        <title>BackMusic - Безрекламная музыка</title>
     </head>
 
     <body>
@@ -25,8 +25,8 @@
             <script src="js/fluid-sim.js"></script>
 
             <div id="main-text">
-                Основная страница в разработке.</br>
-                Перейти на <a href="secret.html">вторую страницу</a>
+                Пример второй страницы.</br>
+                Перейти на <a href="index.html">главную страницу</a>
             </div>
         </div>
 
