--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <body>
         <div class="header no-select">
-            <div id="logo" onclick="location_href('index.html')">
+            <div id="logo" onclick="location_href('')">
                 <div id="logo-icon"></div>
                 <div id="logo-text">BackMusic</div>
             </div>
