--- a/secret.html
+++ b/secret.html
@@ -14,7 +14,7 @@
 
     <body>
         <div class="header no-select">
-            <div id="logo" onclick="location_href('index.html')">
+            <div id="logo" onclick="location_href('')">
                 <div id="logo-icon"></div>
                 <div id="logo-text">BackMusic</div>
             </div>
@@ -26,7 +26,7 @@
 
             <div id="main-text">
                 Пример второй страницы.</br>
-                Перейти на <a href="index.html">главную страницу</a>
+                Перейти на <a href="">главную страницу</a>
             </div>
         </div>
 
