--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 
         <link rel="shortcut icon" type="image/x-icon" href="content/images/favicon.ico">
         <link rel="stylesheet"    type="text/css"     href="css/index.css">
@@ -26,7 +25,6 @@
 
             <div id="main-text">
                 Основная страница в разработке.</br>
-                Перейти на <a href="secret.html">вторую страницу</a>
             </div>
         </div>
 
@@ -35,12 +33,18 @@
                 Copyright © <script>get_current_year()</script> LukovDev LLC
             </div>
 
-            <div id="feedback">
-                Обратная связь:</br>
-                <a target="_blank" href="https://github.com/LukovDev">GitHub LukovDev</a></br>
-                <a target="_blank" href="https://t.me/mr_lukov">Telegram</a></br>
-                <a target="_blank" href="https://vk.com/mr_lukov">VK</a></br>
+            <div id="footer-content">
+                <div class="footer-content-item" id="feedback">
+                    Обратная связь:</br>
+                    <a target="_blank" href="https://github.com/LukovDev">GitHub LukovDev</a></br>
+                    <a target="_blank" href="https://t.me/mr_lukov">Telegram</a></br>
+                    <a target="_blank" href="https://vk.com/mr_lukov">VK</a></br>
                 </div>
+
+                <video autoplay loop muted class="footer-content-item" style="width: 92px; height: 92px;">
+                    <source src="content/webm/kekw.webm" type="video/webm">
+                </video>
+            </div>
 
             <div id="github-pages">
                 Hosted on GitHub Pages
