--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
 
-        <link rel="shortcut icon" type="image/x-icon" href="content/images/favicon.ico">
-        <link rel="stylesheet"    type="text/css"     href="css/index.css">
+        <link rel="shortcut icon" type="image/x-icon" href="content/images/favicon.ico?v=1.0">
+        <link rel="stylesheet"    type="text/css"     href="css/index.css?v=1.0">
 
         <script src="js/utils.js"></script>
 
