--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8">
 
-        <link rel="shortcut icon" type="image/x-icon" href="content/images/favicon.ico?v=1.0">
-        <link rel="stylesheet"    type="text/css"     href="css/index.css?v=1.0">
+        <link rel="shortcut icon" type="image/x-icon" href="content/images/favicon.ico?v=0.1">
+        <link rel="stylesheet"    type="text/css"     href="css/index.css?v=0.1">
 
         <script src="js/utils.js"></script>
 
-        <title>Secret Page</title>
+        <title>BackMusic - Безрекламная музыка</title>
     </head>
 
     <body>
