--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
 
         <link rel="shortcut icon" type="image/x-icon" href="content/images/favicon.ico?v=0.1">
-        <link rel="stylesheet"    type="text/css"     href="css/pages/about.css?v=3005241541">
+        <link rel="stylesheet"    type="text/css"     href="css/pages/about.css?v=3005242000">
 
         <script src="js/utils.js"></script>
 
@@ -13,7 +13,7 @@
 
     <body>
         <content class="no-select">
-            <div id="main-context">
+            <div id="main-content">
                 <video autoplay loop muted style="width: 92px; height: 92px;" id="webm">
                     <source src="content/webm/kekw.webm" type="video/webm">
                 </video>
