--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
 
         <link rel="shortcut icon" type="image/x-icon" href="content/images/favicon.ico?v=0.1">
-        <link rel="stylesheet"    type="text/css"     href="css/pages/index.css?v=3005241541">
+        <link rel="stylesheet"    type="text/css"     href="css/pages/index.css?v=3005242000">
 
         <script src="js/utils.js"></script>
 
@@ -23,7 +23,7 @@
             <canvas id="fluid-canvas"></canvas>
             <script src="js/fluid-sim.js"></script>
 
-            <div id="main-context">
+            <div id="main-content">
                 Войдите в учётную запись Google:
                 <button id="sign-in" onclick="link_href('singin.html')">Войти</button>
             </div>
