--- a/singin.html
+++ b/singin.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
 
         <link rel="shortcut icon" type="image/x-icon" href="content/images/favicon.ico?v=0.1">
-        <link rel="stylesheet"    type="text/css"     href="css/pages/singin.css?v=3005241541">
+        <link rel="stylesheet"    type="text/css"     href="css/pages/singin.css?v=3005242000">
 
         <script src="js/utils.js"></script>
 
@@ -13,7 +13,7 @@
 
     <body>
         <content class="no-select">
-            <div id="main-context">
+            <div id="main-content">
                 Эта страница в разработке.</br>
                 <a target="" href="index.html">Вернуться назад</a>
             </div>
