--- a/singin.html
+++ b/singin.html
@@ -14,8 +14,12 @@
     <body>
         <content class="no-select">
             <div id="main-content">
+                <video autoplay loop muted style="width: 128px; height: 128px;" id="webm">
+                    <source src="content/webm/pc-boy.webm" type="video/webm">
+                </video>
+
                 Эта страница в разработке.</br>
-                <a target="" href="index.html">Вернуться назад</a>
+                <a target="" href="index.html" id="go-back">Вернуться назад</a>
             </div>
         </content>
     </body>
